--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -40,3 +40,14 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# Swap the comments on the following lines if you don't wish to use zero-installs
+# Documentation here: https://yarnpkg.com/features/zero-installs
+!.yarn/cache
+#.pnp.*
