--- a/routes/package.json
+++ b/routes/package.json
@@ -6,7 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "standalone": "ng generate @angular/core:standalone",
+    "tscversion": "tsc --version"
   },
   "private": true,
   "dependencies": {
