--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "standalone": "ng generate @angular/core:standalone"
   },
   "private": true,
   "dependencies": {
