--- a/forms/.vscode/settings.json
+++ b/forms/.vscode/settings.json
@@ -6,13 +6,18 @@
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#ce4ed0",
     "activityBarBadge.foreground": "#15202b",
-    "sash.hoverBorder": "#6fd9d7"
+    "sash.hoverBorder": "#6fd9d7",
+    "commandCenter.border": "#15202b99",
+    "sideBar.border": "#6fd9d7",
+    "titleBar.activeBackground": "#47cecc",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#47cecc99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
   "peacock.color": "#47cecc",
   "search.exclude": {
     "**/.yarn": true,
     "**/.pnp.*": true
   },
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
 }
