--- a/forms/package.json
+++ b/forms/package.json
@@ -1,7 +1,6 @@
 {
   "name": "forms",
   "version": "0.0.0",
-  "packageManager": "yarn@3.6.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -27,6 +26,8 @@
     "@angular-devkit/build-angular": "^17.0.8",
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
+    "source-map-explorer": "^2.5.3",
     "typescript": "5.2.2"
-  }
+  },
+  "packageManager": "pnpm@9.2.0+sha1.886364ebd6dae009284bebc56ed4296bb6dd557a"
 }
