--- a/basic-root-service-herobios/angular.json
+++ b/basic-root-service-herobios/angular.json
@@ -6,7 +6,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "local-service-basic-herobios": {
+    "basic-root-service-herobios": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -43,12 +43,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/local-service-basic-herobios",
+            "outputPath": "dist/basic-root-service-herobios",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -56,9 +54,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -89,10 +85,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "local-service-basic-herobios:build:production"
+              "buildTarget": "basic-root-service-herobios:build:production"
             },
             "development": {
-              "buildTarget": "local-service-basic-herobios:build:development"
+              "buildTarget": "basic-root-service-herobios:build:development"
             }
           },
           "defaultConfiguration": "development"
