--- a/user-reporting-api/src/UserReportingApi/UserReportingApi.csproj
+++ b/user-reporting-api/src/UserReportingApi/UserReportingApi.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <InternalsVisibleTo Include="UserReportingApi.IntegrationTests" />
   </ItemGroup>
 
 </Project>
