feat(api,app): add CORS support, enable API proxy

--- a/user-reporting-app/angular.json
+++ b/user-reporting-app/angular.json
@@ -99,7 +99,10 @@
               "buildTarget": "mat-table:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
