feat(schema): add workExperience and nested _id fields to User schema

--- a/user-reporting-app/.vscode/settings.json
+++ b/user-reporting-app/.vscode/settings.json
@@ -24,4 +24,7 @@
     "**/${fileBasenameNoExtension}.css",
     "**/${fileBasenameNoExtension}.scss"
   ],
+  "[markdown]": {
+    "editor.defaultFormatter": "yzhang.markdown-all-in-one"
+  },
 }
