--- a/user-reporting-api/tests/UserReportingApi.IntegrationTests/UserReportingApi.IntegrationTests.csproj
+++ b/user-reporting-api/tests/UserReportingApi.IntegrationTests/UserReportingApi.IntegrationTests.csproj
@@ -8,11 +8,12 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <AssemblyName>UserReportingApi.IntegrationTests</AssemblyName>
+    <UserSecretsId>ce1abb0d-c29f-4618-b742-504954c040a6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="FluentAssertions" Version="8.2.0" />
+    <PackageReference Include="FluentAssertions" Version="[7.0.0]" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
