--- a/user-reporting-app/biome.json
+++ b/user-reporting-app/biome.json
@@ -38,6 +38,9 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   }
 }
