feat(cross-tab): implement session-based editing with state management
- Add cross-tab communication via session storage
- Update session service to handle init/updates to server state
- Refactor table data source to aggregate initial data and edits
- Rename record form to edit form and update routes

--- a/user-reporting-app/biome.json
+++ b/user-reporting-app/biome.json
@@ -31,7 +31,8 @@
         "noExplicitAny": "off"
       },
       "complexity": {
-        "noForEach": "off"
+        "noForEach": "off",
+        "useLiteralKeys": "off"
       }
     }
   },
