test(app): add Karma/Jasmine test support and initial ChangeLogService tests

--- a/user-reporting-app/biome.json
+++ b/user-reporting-app/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["**/node_modules/**", "usersData.json"]
+    "ignore": ["**/node_modules/**", "usersData.json", "karma.conf.js"]
   },
   "formatter": {
     "enabled": true,
