--- a/user-reporting-api/src/UserReportingApi/appsettings.Development.json
+++ b/user-reporting-api/src/UserReportingApi/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "userAppDB"
+    "DatabaseName": "strTxnDB"
   },
   "Logging": {
     "LogLevel": {
