--- a/user-reporting-app/Dockerfile
+++ b/user-reporting-app/Dockerfile
@@ -2,7 +2,8 @@
 FROM mongo:8.0.9
 
 # Copy the users data file and initialization script into the container
-COPY usersData.json /docker-entrypoint-initdb.d/
+COPY mock-data/MOCK_DATA_cashDepositComplete.json /docker-entrypoint-initdb.d/
+COPY mock-data/MOCK_DATA_cashWithdrawalComplete.json /docker-entrypoint-initdb.d/
 COPY init.sh /docker-entrypoint-initdb.d/
 
 # Ensure the initialization script is executable
