feat(table): implement row highlights and OnPush change detection
- Enforce immutability on record data to synchronize UI features like highlights

--- a/user-reporting-app/angular.json
+++ b/user-reporting-app/angular.json
@@ -12,7 +12,8 @@
       "schematics": {
         "@schematics/angular:component": {
           "inlineTemplate": true,
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush"
         }
       },
       "root": "",
