feat(app-api): add comprehensive transaction search feature
- Implement backend MongoDB query handling with multiple source data models
- Add Angular transaction search component with complex reactive form and validations
- Create selectable tables for account numbers, party keys, product types, and source refresh times with ControlValueAccessor integration
- Add AML-related services with simulated data for session, party, product, and transaction search
- Introduce custom review period date directive with validation for form input
- Enhance styling with Angular Material overrides, typography scaling, and skeleton loading states
- Configure routing for transaction search with guards and error handling middleware
- Add Dockerfile setup with data initialization scripts for local MongoDB environment
- Remove deprecated StrTxnRecord model and update dependencies

BREAKING CHANGE: Removed StrTxnRecord model; update MongoDB data handling accordingly.

--- a/Dockerfile.mongo
+++ b/Dockerfile.mongo
@@ -1,10 +1,8 @@
 # Dockerfile
 FROM mongo:8.0.9
 
-# Copy the users data file and initialization script into the container
-COPY data/MOCK_DATA_cashDepositComplete.json /docker-entrypoint-initdb.d/
-COPY data/MOCK_DATA_cashWithdrawalComplete.json /docker-entrypoint-initdb.d/
-COPY data/init.sh /docker-entrypoint-initdb.d/
+# Copy source data and initialization script into container
+COPY data/ /docker-entrypoint-initdb.d/
 
 # Ensure the initialization script is executable
 RUN chmod +x /docker-entrypoint-initdb.d/init.sh
