--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -24,6 +24,7 @@
     "@e965/xlsx": "^0.20.3",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@biomejs/biome": "1.9.4",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash-es": "^4.17.12",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
