--- a/user-reporting-app/.vscode/extensions.json
+++ b/user-reporting-app/.vscode/extensions.json
@@ -12,6 +12,9 @@
     "pucelle.vscode-css-navigation",
     "ecmel.vscode-html-css",
     "mariusalchimavicius.json-to-ts",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "asvetliakov.vscode-neovim",
+    "spacian.jumplist",
+    "meganrogge.template-string-converter"
   ]
 }
