--- a/user-reporting-app/angular.json
+++ b/user-reporting-app/angular.json
@@ -108,7 +108,9 @@
               }
             ],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js",
+            "codeCoverage": true
           }
         }
       }
