feat(app): implement manual transaction upload and enhance form architecture
- implement saveManualTransactions and refactor updateQueue$ in SessionStateService to support manual uploads
- create ManualUploadReviewTableComponent for reviewing manual transaction entries
- extract common validation logic into common-validation.ts and form-helpers.ts
- integrate FormOptionsService in EditFormComponent for async dropdown loading with skeleton states
- enhance BaseTableComponent with master selection toggle and recently opened rows tracking
- improve resource cleanup and error handling in SessionStateService using DestroyRef
- itegrity checks/tests for str transaction object structure

--- a/user-reporting-app/.vscode/settings.json
+++ b/user-reporting-app/.vscode/settings.json
@@ -18,7 +18,8 @@
   "editor.defaultFormatter": "biomejs.biome",
   "CSSNavigation.enableIdAndClassNameCompletion": false,
   "CSSNavigation.alwaysIncludeGlobPatterns": [
-    "node_modules/@angular/material/prebuilt-themes/rose-red.css"
+    "node_modules/@angular/material/prebuilt-themes/rose-red.css",
+    "node_modules/bootstrap/dist/css/bootstrap-utilities.css"
   ],
   "css.styleSheets": [
     "**/${fileBasenameNoExtension}.css",
