--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -27,7 +27,7 @@
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "uuid": "^11.1.0",
+    "ulid": "^3.0.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
