chore: configure ESLint and Prettier with custom import rules
- Replace Biome with ESLint, Prettier, and Angular-specific linting plugins
- Add `.prettierrc` configuration to ensure source code is properly formatted and linted
- Implement `no-restricted-imports` rule to enforce lazy loading for the `manual-upload-stepper` component (prevents eager loading of heavy deps like `xlsx`)
- Update `angular.json` and `package.json` with new linting builders and scripts

--- a/user-reporting-app/.vscode/settings.json
+++ b/user-reporting-app/.vscode/settings.json
@@ -15,7 +15,6 @@
     "titleBar.inactiveForeground": "#15202b99"
   },
   "peacock.color": "#ab74e8",
-  "editor.defaultFormatter": "biomejs.biome",
   "CSSNavigation.enableIdAndClassNameCompletion": false,
   "CSSNavigation.alwaysIncludeGlobPatterns": [
     "node_modules/@angular/material/prebuilt-themes/rose-red.css",
@@ -25,6 +24,11 @@
     "**/${fileBasenameNoExtension}.css",
     "**/${fileBasenameNoExtension}.scss"
   ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[markdown]": {
     "editor.defaultFormatter": "yzhang.markdown-all-in-one"
   },
@@ -75,5 +79,5 @@
       "suffix": "component",
       "fileNameSuffix": ".component"
     }
-  },
+  }
 }
