--- a/user-reporting-app/.vscode/extensions.json
+++ b/user-reporting-app/.vscode/extensions.json
@@ -8,13 +8,14 @@
     "cyrilletuzi.angular-schematics",
     "obenjiro.arrr",
     "aaron-bond.better-comments",
-    "biomejs.biome",
     "pucelle.vscode-css-navigation",
     "ecmel.vscode-html-css",
     "mariusalchimavicius.json-to-ts",
     "esbenp.prettier-vscode",
     "asvetliakov.vscode-neovim",
     "spacian.jumplist",
-    "meganrogge.template-string-converter"
+    "meganrogge.template-string-converter",
+    "dbaeumer.vscode-eslint",
+    "crystal-spider.jsdoc-generator"
   ]
 }
