refactor(app): change log service immutable handling logic
- Refactor `ChangeLogService` to apply changes immutably and handle dependent property toggles
- Add unit tests ensuring immutable application of change logs and correct dependency handling
- Enforce `no-param-reassign` ESLint rule to prevent mutation of parameters and improve code safety
- Modify `EditFormComponent` and validators to support `SPECIAL_EMPTY_VALUE` for cleared fields
- Simplify `ControlToggleDirective` and remove obsolete `appControlRequired` inputs

--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -10,7 +10,8 @@
     "analyze-bundle": "ng build --configuration=analyze-bundle && source-map-explorer dist/**/*.js --no-border-checks",
     "lint": "ng lint",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
