--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -42,6 +42,7 @@
     "@eslint/js": "^9.39.1",
     "@types/jasmine": "~5.1.0",
     "@types/lodash-es": "^4.17.12",
+    "@vitest/eslint-plugin": "^1.5.1",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
