--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -28,6 +28,7 @@
     "@e965/xlsx": "^0.20.3",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
+    "echarts": "^6.0.0",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
