--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
     "echarts": "^6.0.0",
+    "idb": "^8.0.3",
     "lodash-es": "^4.17.21",
     "marked": "^17.0.0",
     "ngx-markdown": "^21.0.1",
