--- a/hashbrown-proxy/.vscode/settings.json
+++ b/hashbrown-proxy/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#b0a376",
-        "activityBar.background": "#b0a376",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#ebf3f1",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#b0a376",
-        "sideBar.border": "#b0a376",
-        "titleBar.activeBackground": "#9a8c59",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#9a8c5999",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#fa1b49",
+        "activityBar.background": "#fa1b49",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#155e02",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#fa1b49",
+        "sideBar.border": "#fa1b49",
+        "titleBar.activeBackground": "#dd0531",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#dd053199",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#9a8c59"
+    "peacock.color": "#dd0531"
 }
