feat(parties): add party collection and management to selections workflow
- Add Party entity with MongoDB collection and unique composite index (partyIdentifier + caseRecordId)
- Extend selections API endpoints to handle parties alongside selections
  - Add parties field to AddSelectionsRequest/Response and FetchSelectionsResponse
  - Update /selections endpoint to fetch and return both selections and parties
  - Modify /selections/add endpoint to insert parties within same transaction
- Update frontend store and services to manage parties
  - Add parties array to CaseRecordState
  - Refactor addSelections to addSelectionsAndParties with party deduplication
  - Update qAddManualSelections to qAddManualSelectionsAndParties
- Enhance transformation pipeline to extract and return party data
  - Modify all transform functions (ABM, OLB/EMT, Wire, OTC) to return {selection, parties}
  - Update ManualTransactionBuilder to generate and return parties
  - Replace party info fetching with party generation via PartyGenService
- Implement JCS canonicalization for deterministic party hashing
- Add comprehensive integration tests for party uniqueness constraints and cross-case validation
- Update database seed script to restore parties collection from dump
- Replace direct party lookup with PartyGenService.generateParty() in manual transaction builder

BREAKING CHANGE: API contracts changed - selections endpoints now require/return parties data

--- a/user-reporting-app/package.json
+++ b/user-reporting-app/package.json
@@ -30,6 +30,7 @@
     "@hashbrownai/core": "^0.4.1",
     "@hashbrownai/google": "^0.4.1",
     "bootstrap": "^5.3.7",
+    "canonicalize": "^2.1.0",
     "date-fns": "^4.1.0",
     "echarts": "^6.0.0",
     "idb": "^8.0.3",
